# draft-irtf-cfrg-hybrid-kems

./: .gitignore  .gitmodules  .includes.mk  .note.xml  LICENSE.md  README.md  archive.json  draft-irtf-cfrg-generic-hybrid-kems.md  draft-irtf-cfrg-generic-hybrid-kems.txt  draft-irtf-cfrg-hybrid-kems.html  draft-irtf-cfrg-hybrid-kems.md  draft-irtf-cfrg-hybrid-kems.md.bak  draft-irtf-cfrg-hybrid-kems.txt  index.html
.github/: CODEOWNERS
abstract/: draft-irtf-cfrg-hybrid-kems.html  index.html
add-decaps-to-encaps-derivation/: draft-irtf-cfrg-hybrid-kems.html  draft-irtf-cfrg-hybrid-kems.txt  index.html
backticks/: index.html
cite-ck-proofs/: index.html
cite-ug-proofs/: draft-irtf-cfrg-hybrid-kems.html  draft-irtf-cfrg-hybrid-kems.txt  index.html
cleanup-ghp-qsf/: draft-irtf-cfrg-hybrid-kems.html  index.html
copy-paste-errors/: draft-irtf-cfrg-hybrid-kems.html  index.html
dconnolly-patch-1/: draft-irtf-cfrg-hybrid-kems.html  draft-irtf-cfrg-hybrid-kems.txt  index.html
dconnolly-patch-2/: index.html
draft-irtf-cfrg-generic-hybrid-kems-00/: draft-irtf-cfrg-generic-hybrid-kems.html  index.html
draft-irtf-cfrg-hybrid-kems-00/: draft-irtf-cfrg-hybrid-kems.html  draft-irtf-cfrg-hybrid-kems.txt  index.html
draft-irtf-cfrg-hybrid-kems-01/: draft-irtf-cfrg-hybrid-kems.html  draft-irtf-cfrg-hybrid-kems.txt  (+1 more)
reference-implementation/: .gitignore  Cargo.toml
reference-implementation/.claude/: settings.local.json
reference-implementation/src/: error.rs  ghp.rs  hybrid_tests.rs  lib.rs  pre.rs  qsf.rs  test_impls.rs  test_utils.rs  traits.rs  utils.rs
(+116 files in other folders)
